--- a/OpenGLSandbox/OpenGLSandbox.vcxproj
+++ b/OpenGLSandbox/OpenGLSandbox.vcxproj
@@ -70,20 +70,20 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>C:\_Git\glew-2.1.0\include;C:\_Git\glfw-3.3\include;include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\_Git\glfw-3.3\bin\$(Platform)\$(Configuration);C:\_Git\glew-2.1.0\lib\Release\$(Platform);$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\_Git\Simple OpenGL Image Library\src;C:\_Git\glew-2.1.0\include;C:\_Git\glfw-3.3\include;include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\_Git\glfw-3.3\bin\$(Platform)\$(Configuration);c:\_Git\Simple OpenGL Image Library\projects\VC9\$(Configuration);C:\_Git\glew-2.1.0\lib\Release\$(Platform);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>C:\_Git\glew-2.1.0\include;C:\_Git\glfw-3.3\include;include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\_Git\glfw-3.3\bin\$(Platform)\$(Configuration);C:\_Git\glew-2.1.0\lib\Release\$(Platform);$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\_Git\Simple OpenGL Image Library\src;C:\_Git\glew-2.1.0\include;C:\_Git\glfw-3.3\include;include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\_Git\glfw-3.3\bin\$(Platform)\$(Configuration);c:\_Git\Simple OpenGL Image Library\projects\VC9\$(Configuration);C:\_Git\glew-2.1.0\lib\Release\$(Platform);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\_Git\glew-2.1.0\include;C:\_Git\glfw-3.3\include;include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\_Git\glfw-3.3\bin\$(Platform)\$(Configuration);C:\_Git\glew-2.1.0\lib\Release\$(Platform);$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\_Git\Simple OpenGL Image Library\src;C:\_Git\glew-2.1.0\include;C:\_Git\glfw-3.3\include;include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\_Git\glfw-3.3\bin\$(Platform)\$(Configuration);c:\_Git\Simple OpenGL Image Library\projects\VC9\$(Configuration);C:\_Git\glew-2.1.0\lib\Release\$(Platform);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>C:\_Git\glew-2.1.0\include;C:\_Git\glfw-3.3\include;include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\_Git\glfw-3.3\bin\$(Platform)\$(Configuration);C:\_Git\glew-2.1.0\lib\Release\$(Platform);$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\_Git\Simple OpenGL Image Library\src;C:\_Git\glew-2.1.0\include;C:\_Git\glfw-3.3\include;include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\_Git\glfw-3.3\bin\$(Platform)\$(Configuration);c:\_Git\Simple OpenGL Image Library\projects\VC9\$(Configuration);C:\_Git\glew-2.1.0\lib\Release\$(Platform);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -93,7 +93,7 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>glfw3.lib;glew32s.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;glew32s.lib;opengl32.lib;SOIL.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -104,7 +104,7 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>glfw3.lib;glew32s.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;glew32s.lib;opengl32.lib;SOIL.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -119,7 +119,7 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>glfw3.lib;glew32s.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;glew32s.lib;opengl32.lib;SOIL.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -134,15 +134,18 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>glfw3.lib;glew32s.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;glew32s.lib;opengl32.lib;SOIL.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="src\shader.cpp" />
+    <ClCompile Include="src\texture.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\glews.h" />
     <ClInclude Include="include\shader.h" />
+    <ClInclude Include="include\texture.h" />
   </ItemGroup>
   <ItemGroup>
     <CopyFileToFolders Include="shaders\basicFS.glsl">
@@ -152,6 +155,16 @@
     <CopyFileToFolders Include="shaders\basicVS.glsl">
       <DeploymentContent>true</DeploymentContent>
       <FileType>Document</FileType>
+    </CopyFileToFolders>
+  </ItemGroup>
+  <ItemGroup>
+    <CopyFileToFolders Include="textures\container.jpg">
+      <DeploymentContent>true</DeploymentContent>
+    </CopyFileToFolders>
+  </ItemGroup>
+  <ItemGroup>
+    <CopyFileToFolders Include="textures\awesomeface.png">
+      <DeploymentContent>true</DeploymentContent>
     </CopyFileToFolders>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
