--- a/OpenGLSandbox/OpenGLSandbox.vcxproj.filters
+++ b/OpenGLSandbox/OpenGLSandbox.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="include\mesh.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="include\stb_image.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CopyFileToFolders Include="shaders\basicFS.glsl">
