--- a/OpenGLSandbox/Dependencies.props
+++ b/OpenGLSandbox/Dependencies.props
@@ -2,13 +2,13 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <ExternalsDir>C:/_Git/</ExternalsDir>
-    <IncludePath>$(ExternalsDir)glfw-3.3/include;$(ExternalsDir)glew-2.1.0/include;$(ExternalsDir)glm-0.9.9.6;$(IncludePath)</IncludePath>
-    <LibraryPath>$(ExternalsDir)glfw-3.3/bin/$(Platform)/$(Configuration);$(ExternalsDir)glew-2.1.0/lib/Release/$(Platform);$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ExternalsDir)glfw-3.3/include;$(ExternalsDir)glad/include;$(ExternalsDir)glm-0.9.9.6;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ExternalsDir)glfw-3.3/bin/$(Platform)/$(Configuration);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
 
   <ItemDefinitionGroup>
     <Link>
-      <AdditionalDependencies>glfw3.lib;glew32s.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
 </Project>
