--- a/OpenGLSandbox/OpenGLSandbox.vcxproj
+++ b/OpenGLSandbox/OpenGLSandbox.vcxproj
@@ -122,9 +122,9 @@
     <ClCompile Include="src\mesh.cpp" />
     <ClCompile Include="src\shader.cpp" />
     <ClCompile Include="src\texture.cpp" />
+    <ClCompile Include="src\glad.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\glews.h" />
     <ClInclude Include="include\mesh.h" />
     <ClInclude Include="include\shader.h" />
     <ClInclude Include="include\texture.h" />
