--- a/OpenGLSandbox/Dependencies.props
+++ b/OpenGLSandbox/Dependencies.props
@@ -2,8 +2,8 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <ExternalsDir>C:/_Git/</ExternalsDir>
-    <IncludePath>$(ExternalsDir)glfw-3.3/include;$(ExternalsDir)glad/include;$(ExternalsDir)glm-0.9.9.6;$(IncludePath)</IncludePath>
-    <LibraryPath>$(ExternalsDir)glfw-3.3/bin/$(Platform)/$(Configuration);$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ExternalsDir)glfw/include;$(ExternalsDir)glad/include;$(ExternalsDir)glm;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ExternalsDir)glfw/bin/$(Platform)/$(Configuration);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
 
   <ItemDefinitionGroup>
