--- a/OpenGLSandbox/OpenGLSandbox.vcxproj
+++ b/OpenGLSandbox/OpenGLSandbox.vcxproj
@@ -131,26 +131,31 @@
     <ClInclude Include="include\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
-    <CopyFileToFolders Include="shaders\basicFS.glsl">
+    <None Include="shaders\basicFS.glsl">
       <DeploymentContent>true</DeploymentContent>
-      <FileType>Document</FileType>
-    </CopyFileToFolders>
-    <CopyFileToFolders Include="shaders\basicVS.glsl">
+    </None>
+    <None Include="shaders\basicVS.glsl">
       <DeploymentContent>true</DeploymentContent>
-      <FileType>Document</FileType>
-    </CopyFileToFolders>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <CopyFileToFolders Include="textures\container.jpg">
+    <Image Include="textures\awesomeface.png">
       <DeploymentContent>true</DeploymentContent>
-    </CopyFileToFolders>
-  </ItemGroup>
-  <ItemGroup>
-    <CopyFileToFolders Include="textures\awesomeface.png">
+    </Image>
+    <Image Include="textures\container.jpg">
       <DeploymentContent>true</DeploymentContent>
-    </CopyFileToFolders>
+    </Image>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <Target Name="CopyResources" AfterTargets="Build">
+    <Message Text="Copy stuff ..." />
+    <ItemGroup>
+      <Shaders2Copy Include="shaders/*.glsl" />
+      <Textures2Copy Include="textures/*" />
+    </ItemGroup>
+    <Copy SourceFiles="@(Shaders2Copy)" DestinationFolder="$(OutDir)" />
+    <Copy SourceFiles="@(Textures2Copy)" DestinationFolder="$(OutDir)" />
+  </Target>
 </Project>
