--- a/msvc/OpenGLSandbox.vcxproj
+++ b/msvc/OpenGLSandbox.vcxproj
@@ -122,6 +122,7 @@
   <ItemGroup>
     <ClCompile Include="..\externals\glad\src\glad.c" />
     <ClCompile Include="..\src\entities\RotatingCube.cpp" />
+    <ClCompile Include="..\src\lineMesh.cpp" />
     <ClCompile Include="..\src\main.cpp" />
     <ClCompile Include="..\src\mesh.cpp" />
     <ClCompile Include="..\src\shader.cpp" />
@@ -130,6 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\entities\RotatingCube.h" />
+    <ClInclude Include="..\src\lineMesh.h" />
     <ClInclude Include="..\src\mesh.h" />
     <ClInclude Include="..\src\shader.h" />
     <ClInclude Include="..\src\texture.h" />
@@ -141,6 +143,12 @@
       <DeploymentContent>true</DeploymentContent>
     </None>
     <None Include="..\src\shaders\basicVS.glsl">
+      <DeploymentContent>true</DeploymentContent>
+    </None>
+    <None Include="shaders\linesFS.glsl">
+      <DeploymentContent>true</DeploymentContent>
+    </None>
+    <None Include="shaders\linesVS.glsl">
       <DeploymentContent>true</DeploymentContent>
     </None>
   </ItemGroup>
