--- a/msvc/OpenGLSandbox.vcxproj
+++ b/msvc/OpenGLSandbox.vcxproj
@@ -120,17 +120,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\externals\glad\src\glad.c" />
+    <ClCompile Include="..\src\entities\RotatingCube.cpp" />
     <ClCompile Include="..\src\main.cpp" />
     <ClCompile Include="..\src\mesh.cpp" />
     <ClCompile Include="..\src\shader.cpp" />
     <ClCompile Include="..\src\texture.cpp" />
-    <ClCompile Include="$(ExternalsDir)glad/src/glad.c" />
+    <ClCompile Include="..\src\window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\src\entities\RotatingCube.h" />
     <ClInclude Include="..\src\mesh.h" />
     <ClInclude Include="..\src\shader.h" />
     <ClInclude Include="..\src\texture.h" />
     <ClInclude Include="..\src\FPScamera.h" />
+    <ClInclude Include="..\src\window.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\src\shaders\basicFS.glsl">
