--- a/msvc/OpenGLSandbox.vcxproj
+++ b/msvc/OpenGLSandbox.vcxproj
@@ -125,7 +125,7 @@
     <ClCompile Include="..\src\entities\RotatingCube.cpp" />
     <ClCompile Include="..\src\entities\ThickLineCollection.cpp" />
     <ClCompile Include="..\src\thickLineMesh.cpp" />
-    <ClCompile Include="..\src\lineMesh2.cpp" />
+    <ClCompile Include="..\src\lineMesh.cpp" />
     <ClCompile Include="..\src\main.cpp" />
     <ClCompile Include="..\src\mesh.cpp" />
     <ClCompile Include="..\src\shader.cpp" />
@@ -137,7 +137,7 @@
     <ClInclude Include="..\src\entities\RotatingCube.h" />
     <ClInclude Include="..\src\entities\ThickLineCollection.h" />
     <ClInclude Include="..\src\thickLineMesh.h" />
-    <ClInclude Include="..\src\lineMesh2.h" />
+    <ClInclude Include="..\src\lineMesh.h" />
     <ClInclude Include="..\src\mesh.h" />
     <ClInclude Include="..\src\shader.h" />
     <ClInclude Include="..\src\texture.h" />
